--- a/koreacovid.html
+++ b/koreacovid.html
@@ -480,7 +480,7 @@ The odds ratio is 2.3 to 1</p>
 </div>
 <div id="conclusions" class="section level2">
 <h2>Conclusions</h2>
-<p>The P value is 0.0012 which is less than 0.05, therefore we REJECT the null hypothesis, there IS a correlation between dying of Covid-19 and sex.</p>
+<p>The P value is 0.0012 which is less than 0.05, therefore we REJECT the null hypothesis, there IS a correlation between dying of Covid-19 and sex. More men than women die.</p>
 </div>
 </div>
 
